# icc-pr-agent

./: .dockerignore  Dockerfile  README.md  pr-review.yaml  pyproject.toml  server.py
src/: ai_reviewer.py  batch_splitter.py  cli.py  config.py  context_detector.py  file_grouper.py  langfuse_callback.py  langfuse_integration.py  logger.py  models.py  orchestrator.py  record_store.py  result_merger.py  server.py  symbol_indexer.py  template_engine.py
src/platform/: github_adapter.py
src/webhook/: github_handler.py
templates/: default.md.j2
tests/fixtures/: github_pr_synchronize.json
tests/property/: test_ai_reviewer.py  test_batch_splitter.py  test_context_detector.py  test_file_grouper.py  test_result_merger.py  test_symbol_indexer.py
tests/unit/: test_ai_reviewer.py  test_batch_splitter.py  test_cli.py  test_config.py  test_context_detector.py  test_file_grouper.py  test_langfuse_callback.py  test_record_store.py  test_result_merger.py  test_symbol_indexer.py  test_template_engine.py
