[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pr-review"
version = "0.1.0"
description = "AI-powered PR code review tool using LangChain DeepAgents"
requires-python = ">=3.9"
dependencies = [
    "deepagents>=0.1",
    "langchain>=0.3",
    "langchain-openai>=0.3",
    "jinja2>=3.1",
    "httpx[socks]>=0.27",
    "pyyaml>=6.0",
    "fastapi>=0.115",
    "uvicorn>=0.32",
    "tree-sitter>=0.21,<0.22",
    "tree-sitter-languages>=1.10",
    "langfuse>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.14",
    "hypothesis>=6.100",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "W", "F"]

[tool.flake8]
max-line-length = 120
